--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "webpack": "^1.12.15"
   }
 }
