--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Reddit clone built with React, Node, Express, and Mongo.",
   "main": "server/server.js",
   "scripts": {
-    "start": "nodemon server/server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -17,12 +17,18 @@
   },
   "homepage": "https://github.com/theavish/redditJS#readme",
   "dependencies": {
+    "babel-core": "^6.7.6",
+    "babel-preset-stage-1": "^6.1.18",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "webpack": "^1.12.15"
+    "webpack": "^1.12.15",
+    "webpack-dev-server": "^1.14.1"
   }
 }
