--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "homepage": "https://github.com/theavish/redditJS#readme",
   "dependencies": {
     "babel-core": "^6.7.6",
-    "babel-preset-stage-1": "^6.1.18",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "html-webpack-plugin": "^2.16.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "react": "^15.0.1",
